Working code for 1 iter

--- a/Conversion of Data to 2DMOT2015.ipynb
+++ b/Conversion of Data to 2DMOT2015.ipynb
@@ -219,93 +219,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0        95\n",
-      "1        45\n",
-      "2        35\n",
-      "3        29\n",
-      "4        32\n",
-      "5        97\n",
-      "6        45\n",
-      "7        37\n",
-      "8        30\n",
-      "9        33\n",
-      "10      100\n",
-      "11       45\n",
-      "12       38\n",
-      "13       31\n",
-      "14       34\n",
-      "15      102\n",
-      "16       45\n",
-      "17       40\n",
-      "18       31\n",
-      "19       34\n",
-      "20      105\n",
-      "21       45\n",
-      "22       42\n",
-      "23       32\n",
-      "24       35\n",
-      "25      108\n",
-      "26       44\n",
-      "27       33\n",
-      "28       35\n",
-      "29      110\n",
-      "       ... \n",
-      "1419     32\n",
-      "1420     31\n",
-      "1421     46\n",
-      "1422     54\n",
-      "1423     32\n",
-      "1424     31\n",
-      "1425     46\n",
-      "1426     55\n",
-      "1427     33\n",
-      "1428     31\n",
-      "1429     46\n",
-      "1430     55\n",
-      "1431     33\n",
-      "1432     31\n",
-      "1433     46\n",
-      "1434     56\n",
-      "1435     33\n",
-      "1436     31\n",
-      "1437     46\n",
-      "1438     56\n",
-      "1439     33\n",
-      "1440     31\n",
-      "1441     46\n",
-      "1442     57\n",
-      "1443     33\n",
-      "1444     31\n",
-      "1445     46\n",
-      "1446     58\n",
-      "1447     33\n",
-      "1448     32\n",
-      "Name: y_BR, Length: 1449, dtype: int64\n"
+      "1449\n",
+      "0       0\n",
+      "1       0\n",
+      "2       0\n",
+      "3       0\n",
+      "4       0\n",
+      "5       0\n",
+      "6       0\n",
+      "7       0\n",
+      "8       0\n",
+      "9       0\n",
+      "10      0\n",
+      "11      0\n",
+      "12      0\n",
+      "13      0\n",
+      "14      0\n",
+      "15      0\n",
+      "16      0\n",
+      "17      0\n",
+      "18      0\n",
+      "19      0\n",
+      "20      0\n",
+      "21      0\n",
+      "22      0\n",
+      "23      0\n",
+      "24      0\n",
+      "25      0\n",
+      "26      0\n",
+      "27      0\n",
+      "28      0\n",
+      "29      0\n",
+      "       ..\n",
+      "1419    0\n",
+      "1420    0\n",
+      "1421    0\n",
+      "1422    0\n",
+      "1423    0\n",
+      "1424    0\n",
+      "1425    0\n",
+      "1426    0\n",
+      "1427    0\n",
+      "1428    0\n",
+      "1429    0\n",
+      "1430    0\n",
+      "1431    0\n",
+      "1432    0\n",
+      "1433    0\n",
+      "1434    0\n",
+      "1435    0\n",
+      "1436    0\n",
+      "1437    0\n",
+      "1438    0\n",
+      "1439    0\n",
+      "1440    0\n",
+      "1441    0\n",
+      "1442    0\n",
+      "1443    0\n",
+      "1444    0\n",
+      "1445    0\n",
+      "1446    0\n",
+      "1447    0\n",
+      "1448    0\n",
+      "Name: isOccluded, Length: 1449, dtype: int64\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\python36\\lib\\site-packages\\ipykernel_launcher.py:7: SettingWithCopyWarning: \n",
+      "c:\\python36\\lib\\site-packages\\ipykernel_launcher.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  import sys\n",
-      "c:\\python36\\lib\\site-packages\\ipykernel_launcher.py:9: SettingWithCopyWarning: \n",
+      "  \n",
+      "c:\\python36\\lib\\site-packages\\ipykernel_launcher.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  if __name__ == '__main__':\n"
+      "  \n"
      ]
     }
    ],
@@ -313,17 +314,20 @@
     "f=pd.read_csv(path+\"/1/2/hi.csv\")\n",
     "keep_col = ['frameNumber','id','x_TL','y_TL','x_BR','y_BR', 'isOccluded']\n",
     "new_f = f[keep_col]\n",
-    "# new_f.to_csv(\"newFile.csv\", index=False)\n",
     "#print(new_f['x_BR'])\n",
     "#print(new_f['x_TL'])\n",
-    "new_f['x_BR']=new_f['x_BR']-new_f['x_TL']\n",
+    "new_f['x_BR']=new_f['x_BR']-new_f['x_TL']###WIDTH\n",
     "#print(new_f['x_BR'])\n",
-    "new_f['y_BR']=abs(new_f['y_TL']-new_f['y_BR'])\n",
-    "print(new_f['y_BR'])\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "new_f['y_BR']=abs(new_f['y_TL']-new_f['y_BR'])####HEIGHT\n",
+    "#print(new_f['y_BR'])\n",
+    "print(len(f))\n",
+    "print(new_f.isOccluded)\n",
+    "# for i in range(len(f)):\n",
+    "#     if(new_f.isOccluded[i]==1):\n",
+    "#         new_f.isOccluded[i]=0.4\n",
+    "#     else:\n",
+    "#         new_f.isOccluded[i]=1\n",
+    "# new_f.to_csv(\"newFile2.csv\", index=False)"
    ]
   },
   {
