Working code for all iter

--- a/Conversion of Data to 2DMOT2015.ipynb
+++ b/Conversion of Data to 2DMOT2015.ipynb
@@ -54,128 +54,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "File Not Found 1 1\n",
-      "File Not Found 1 2\n",
-      "File Not Found 1 3\n",
-      "File Not Found 1 4\n",
-      "File Not Found 1 5\n",
-      "File Not Found 1 6\n",
-      "File Not Found 1 7\n",
-      "File Not Found 2 1\n",
-      "File Not Found 2 2\n",
-      "File Not Found 2 3\n",
-      "File Not Found 2 4\n",
-      "File Not Found 2 5\n",
-      "File Not Found 2 6\n",
-      "File Not Found 2 7\n",
-      "File Not Found 3 1\n",
-      "File Not Found 3 2\n",
-      "File Not Found 3 3\n",
-      "File Not Found 3 4\n",
-      "File Not Found 3 5\n",
-      "File Not Found 3 6\n",
-      "File Not Found 3 7\n",
-      "File Not Found 4 1\n",
-      "File Not Found 4 2\n",
-      "File Not Found 4 3\n",
-      "File Not Found 4 4\n",
-      "File Not Found 4 5\n",
-      "File Not Found 4 6\n",
-      "File Not Found 4 7\n",
-      "File Not Found 5 1\n",
-      "File Not Found 5 2\n",
-      "File Not Found 5 3\n",
-      "File Not Found 5 4\n",
-      "File Not Found 5 5\n",
-      "File Not Found 5 6\n",
-      "File Not Found 5 7\n",
-      "File Not Found 6 1\n",
-      "File Not Found 6 2\n",
-      "File Not Found 6 3\n",
-      "File Not Found 6 4\n",
-      "File Not Found 6 5\n",
-      "File Not Found 6 6\n",
-      "File Not Found 6 7\n",
-      "File Not Found 7 1\n",
-      "File Not Found 7 2\n",
-      "File Not Found 7 3\n",
-      "File Not Found 7 4\n",
-      "File Not Found 7 5\n",
-      "File Not Found 7 6\n",
-      "File Not Found 7 7\n",
-      "File Not Found 8 1\n",
-      "File Not Found 8 2\n",
-      "File Not Found 8 3\n",
-      "File Not Found 8 4\n",
-      "File Not Found 8 5\n",
-      "File Not Found 8 6\n",
-      "File Not Found 8 7\n",
-      "File Not Found 9 1\n",
-      "File Not Found 9 2\n",
-      "File Not Found 9 3\n",
-      "File Not Found 9 4\n",
-      "File Not Found 9 5\n",
-      "File Not Found 9 6\n",
-      "File Not Found 9 7\n",
-      "File Not Found 10 1\n",
-      "File Not Found 10 2\n",
-      "File Not Found 10 3\n",
-      "File Not Found 10 4\n",
-      "File Not Found 10 5\n",
-      "File Not Found 10 6\n",
-      "File Not Found 10 7\n",
-      "File Not Found 11 1\n",
-      "File Not Found 11 2\n",
-      "File Not Found 11 3\n",
-      "File Not Found 11 4\n",
-      "File Not Found 11 5\n",
-      "File Not Found 11 6\n",
-      "File Not Found 11 7\n",
-      "File Not Found 12 1\n",
-      "File Not Found 12 2\n",
-      "File Not Found 12 3\n",
-      "File Not Found 12 4\n",
-      "File Not Found 12 5\n",
-      "File Not Found 12 6\n",
-      "File Not Found 12 7\n",
-      "File Not Found 13 1\n",
-      "File Not Found 13 2\n",
-      "File Not Found 13 3\n",
-      "File Not Found 13 4\n",
-      "File Not Found 13 5\n",
-      "File Not Found 13 6\n",
-      "File Not Found 13 7\n",
-      "File Not Found 14 1\n",
-      "File Not Found 14 2\n",
-      "File Not Found 14 3\n",
-      "File Not Found 14 4\n",
-      "File Not Found 14 5\n",
-      "File Not Found 14 6\n",
-      "File Not Found 14 7\n",
-      "File Not Found 15 1\n",
-      "File Not Found 15 2\n",
-      "File Not Found 15 3\n",
-      "File Not Found 15 4\n",
-      "File Not Found 15 5\n",
-      "File Not Found 15 6\n",
-      "File Not Found 15 7\n",
-      "File Not Found 16 1\n",
-      "File Not Found 16 2\n",
-      "File Not Found 16 3\n",
-      "File Not Found 16 4\n",
-      "File Not Found 16 5\n",
-      "File Not Found 16 6\n",
-      "File Not Found 16 7\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(1,17):\n",
     "    inpath=path+\"/\"+str(i)\n",
@@ -183,38 +64,18 @@
     "        try:\n",
     "            fullPath=inpath+\"/\"+str(j)+\"/00\"+str(j)+\".csv\"#j loop represents the name of the video folder and the video we are trying to extract\n",
     "            readFile=pd.read_csv(fullPath)\n",
-    "            with open(inpath+\"/\"+str(j)+\"/MOT\"+str(j)+\".csv\",\"wb\") as result:\n",
-    "                wrtFile= csv.writer(result)\n",
-    "            for row in readFile:\n",
-    "                wtrFile.writerow( (row['frameNumber'], row['id'], row[\"x_TL\"], row[y_TL]), row[x_BR]-row[x_TL],row[y_BR]-row[y_TL] )\n",
+    "            keep_col = ['frameNumber','id','x_TL','y_TL','x_BR','y_BR', 'isOccluded']\n",
+    "            newFile = readFile[keep_col]\n",
+    "            newFile['x_BR']=abs(newFile['x_BR']-newFile['x_TL'])###WIDTH\n",
+    "            newFile['y_BR']=abs(newFile['y_TL']-newFile['y_BR'])####HEIGHT\n",
+    "            for i in range(len(readFile)):\n",
+    "                if(newFile.isOccluded[i]==1):\n",
+    "                    newFile.isOccluded[i]=0#Confidence level\n",
+    "                else:\n",
+    "                    newFile.isOccluded[i]=1#Confidence Level\n",
+    "            newFile.to_csv(inpath+\"/\"+str(j)+\"/MOT\"+str(j)+\".csv\", index=False)\n",
     "        except:\n",
     "            print(\"File Not Found\",i,j)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "writerow() takes exactly one argument (4 given)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-32-fef7649f38cf>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mwrtFile\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0mcsv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwriter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mrow\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mreadFile\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m         \u001b[0mwrtFile\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwriterow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrow\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrow\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrow\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: writerow() takes exactly one argument (4 given)"
-     ]
-    }
-   ],
-   "source": [
-    "import csv\n",
-    "readFile=pd.read_csv(path+\"/1/2/002.csv\")\n",
-    "with open(inpath+\"/2/MOT2.csv\",\"wb\") as result:\n",
-    "    wrtFile= csv.writer(result)\n",
-    "    for row in readFile:\n",
-    "        wrtFile.writerow(row[0], row[1], row[2], row[3])"
    ]
   },
   {
@@ -322,61 +183,12 @@
     "#print(new_f['y_BR'])\n",
     "print(len(f))\n",
     "print(new_f.isOccluded)\n",
-    "# for i in range(len(f)):\n",
-    "#     if(new_f.isOccluded[i]==1):\n",
-    "#         new_f.isOccluded[i]=0.4\n",
-    "#     else:\n",
-    "#         new_f.isOccluded[i]=1\n",
-    "# new_f.to_csv(\"newFile2.csv\", index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "readFile=pd.read_csv(path+\"/1/2/002.csv\")\n",
-    "frameNumber=readFile['frameNumber']\n",
-    "df = pd.DataFrame(data={\"col1\":frameNumber})\n",
-    "df.to_csv(inpath+\"/2/MOT2.csv\", sep=',',index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "PermissionError",
-     "evalue": "[Errno 13] Permission denied: 'C:/Users/asd/Desktop/500Frames/1/2/002.csv'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mPermissionError\u001b[0m                           Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-38-b24bd483c8f4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\"/1/2/002.csv\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'w'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mmyfile\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     \u001b[0mwr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcsv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwriter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmyfile\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mquoting\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcsv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mQUOTE_ALL\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0mwr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwriterow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mframeNumber\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mPermissionError\u001b[0m: [Errno 13] Permission denied: 'C:/Users/asd/Desktop/500Frames/1/2/002.csv'"
-     ]
-    }
-   ],
-   "source": [
-    "with open(path+\"/1/2/002.csv\", 'w') as myfile:\n",
-    "    wr = csv.writer(myfile, quoting=csv.QUOTE_ALL)\n",
-    "    wr.writerow(frameNumber)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"source\",\"rb\") as source:\n",
-    "    rdr= csv.reader( source )\n",
-    "    with open(\"result\",\"wb\") as result:\n",
-    "        wtr= csv.writer( result )\n",
-    "        for r in rdr:\n",
-    "            wtr.writerow( (r[0], r[1], r[3], r[4]) )"
+    "for i in range(len(f)):\n",
+    "    if(new_f.isOccluded[i]==1):\n",
+    "        new_f.isOccluded[i]=0#Confidence level\n",
+    "    else:\n",
+    "        new_f.isOccluded[i]=1#Confidence Level\n",
+    "new_f.to_csv(\"newFile2.csv\", index=False)"
    ]
   }
  ],
