one correction in the code

--- a/Conversion of Data to 2DMOT2015.ipynb
+++ b/Conversion of Data to 2DMOT2015.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,48 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File Not Found 1 1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\python36\\lib\\site-packages\\ipykernel_launcher.py:9: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  if __name__ == '__main__':\n",
+      "c:\\python36\\lib\\site-packages\\ipykernel_launcher.py:10: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  # Remove the CWD from sys.path while we load stuff.\n",
+      "c:\\python36\\lib\\site-packages\\IPython\\core\\interactiveshell.py:2910: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File Not Found 2056 7\n",
+      "File Not Found 1489 4\n",
+      "File Not Found 1489 5\n",
+      "File Not Found 1489 6\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(1,17):\n",
     "    inpath=path+\"/\"+str(i)\n",
@@ -70,12 +111,21 @@
     "            newFile['y_BR']=abs(newFile['y_TL']-newFile['y_BR'])####HEIGHT\n",
     "            for i in range(len(readFile)):\n",
     "                if(newFile.isOccluded[i]==1):\n",
-    "                    newFile.isOccluded[i]=0#Confidence level\n",
+    "                    newFile.isOccluded[i]=0#Confidence level is 0 when pedestrian is occluded in ground truth\n",
     "                else:\n",
-    "                    newFile.isOccluded[i]=1#Confidence Level\n",
+    "                    newFile.isOccluded[i]=1#Confidence Level is 1 when pedestrian is not occluded in ground truth\n",
     "            newFile.to_csv(inpath+\"/\"+str(j)+\"/MOT\"+str(j)+\".csv\", index=False)\n",
     "        except:\n",
     "            print(\"File Not Found\",i,j)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Single Iteration Code for saving in the MOT Format"
    ]
   },
   {
@@ -172,23 +222,23 @@
     }
    ],
    "source": [
-    "f=pd.read_csv(path+\"/1/2/hi.csv\")\n",
-    "keep_col = ['frameNumber','id','x_TL','y_TL','x_BR','y_BR', 'isOccluded']\n",
-    "new_f = f[keep_col]\n",
-    "#print(new_f['x_BR'])\n",
-    "#print(new_f['x_TL'])\n",
-    "new_f['x_BR']=new_f['x_BR']-new_f['x_TL']###WIDTH\n",
-    "#print(new_f['x_BR'])\n",
-    "new_f['y_BR']=abs(new_f['y_TL']-new_f['y_BR'])####HEIGHT\n",
-    "#print(new_f['y_BR'])\n",
-    "print(len(f))\n",
-    "print(new_f.isOccluded)\n",
-    "for i in range(len(f)):\n",
-    "    if(new_f.isOccluded[i]==1):\n",
-    "        new_f.isOccluded[i]=0#Confidence level\n",
-    "    else:\n",
-    "        new_f.isOccluded[i]=1#Confidence Level\n",
-    "new_f.to_csv(\"newFile2.csv\", index=False)"
+    "# f=pd.read_csv(path+\"/1/2/hi.csv\")\n",
+    "# keep_col = ['frameNumber','id','x_TL','y_TL','x_BR','y_BR', 'isOccluded']\n",
+    "# new_f = f[keep_col]\n",
+    "# #print(new_f['x_BR'])\n",
+    "# #print(new_f['x_TL'])\n",
+    "# new_f['x_BR']=new_f['x_BR']-new_f['x_TL']###WIDTH\n",
+    "# #print(new_f['x_BR'])\n",
+    "# new_f['y_BR']=abs(new_f['y_TL']-new_f['y_BR'])####HEIGHT\n",
+    "# #print(new_f['y_BR'])\n",
+    "# print(len(f))\n",
+    "# print(new_f.isOccluded)\n",
+    "# for i in range(len(f)):\n",
+    "#     if(new_f.isOccluded[i]==1):\n",
+    "#         new_f.isOccluded[i]=0#Confidence level\n",
+    "#     else:\n",
+    "#         new_f.isOccluded[i]=1#Confidence Level\n",
+    "# new_f.to_csv(\"newFile2.csv\", index=False)"
    ]
   }
  ],
